# drive-bot-ge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
src/: manage.py
src/drive/api/: authentication.py  pagination.py  permission.py  serializers.py  views.py
src/drive/app/: asgi.py  celery.py  settings.py  spectacular.py  urls.py  wsgi.py
src/drive/bot/: apps.py  conf.py  const.py  tests.py  types.py  urls.py  views.py
src/drive/bot/admin/: __init__.py  api_token.py  setting.py  state.py  user.py  user_update.py
src/drive/bot/communication/: __init__.py  common.py  text.py
src/drive/bot/i18n/: README.md  service.py
src/drive/bot/migrations/: 0001_initial.py  0002_load_fixtures.py
src/drive/bot/models/: __init__.py  api_token.py  setting.py  state.py  user.py  user_update.py
src/drive/bot/utils/: common.py  decorator.py  markup.py
src/drive/exam/: apps.py  const.py  tasks.py  urls.py  utils.py
src/drive/exam/admin/: __init__.py  answer.py  category.py  session.py  ticket.py  ticket_history.py  ticket_image.py  ticket_problem.py  ticket_topic.py
src/drive/exam/migrations/: 0001_initial.py  0002_load_fixtures.py
src/drive/exam/models/: __init__.py  answer.py  session.py  ticket.py  ticket_category.py  ticket_history.py  ticket_image.py  ticket_problem.py  ticket_topic.py
src/drive/server_grpc/: __init__.py  exceptions.py  interceptors.py  server.py  servicer.py  utils.py
src/drive/templates/: description.html
src/drive/utils/: common.py
(+77 files in other folders)
